# fastapi_test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pylsp-mypy.cfg  pyproject.toml  setup.cfg
alembic/: env.py
fastapi_test/: app.py  main.py
fastapi_test/api/: deps.py
fastapi_test/api/v1/: api.py
fastapi_test/api/v1/endpoints/: films.py  items.py  people.py  users.py
fastapi_test/crud/: base.py  film.py  user.py
fastapi_test/db/: base.py  init_db.py
fastapi_test/models/: film.py  people.py  user.py
fastapi_test/routers/: films.py  items.py  users.py
fastapi_test/schemas/: film.py  user.py
fastapi_test/utils/: arequest.py  cat_fact.py  debounce.py  throttle.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/v1/endpoints/: test_films.py  test_items.py  test_people.py
tests/utils/: test_arequest.py  test_cat_fact.py  test_debounce.py  test_throttle.py
