[tool.poetry]
name = "fastapi_test"
version = "0.1.0"
description = ""
authors = ["josex2r <jlrepresa@gmail.com>"]

[tool.poetry.scripts]
start = "fastapi_test.main:run"
# start:debug = "python -m debugpy --listen 5678 --wait-for-client -m fastapi_test.main"

[tool.poetry.dependencies]
aiohttp = "*"
fastapi = "*"
pydantic = "*"
python = "^3.10"
uvicorn = "*"
SQLAlchemy = "^1.4.32"
SQLAlchemy-Utils = "^0.38.2"
asyncpg = "^0.25.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "*"
debugpy = "*"
uvicorn = "*"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.2"
pytest-mock = "^3.7.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
